# haskell-ipnspector

./: README.md  firehol_level1.netset  haskell-starter.cabal
executables/: Main.hs
src/Ipnspector/: File.hs  Server.hs  Trie.hs
