name:                ipnspector
version:             0.1.0.0
synopsis:            A simple micro service that reads a list of ips and run a service for querying them.
description:         This project is probably more for learning Cabal right now, but I hope to extend it to Haskell in the future. 
homepage:            https://github.com/donflopez/haskell-ipnspector
license:             MIT
license-file:        LICENSE
author:              Francisco López
maintainer:          donflopez@gmail.com
category:            microservices, ip, lookup
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/donflopez/haskell-ipnspector.git

-- configuration for building a library
library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules:
    Ipnspector.Server
    Ipnspector.Trie
    Ipnspector.File
  build-depends:
    base   >= 4.6   && < 5,
    wai    >= 3.2   && < 4,
    text   >= 1.2   && < 2,
    iproute >= 1.7  && < 2,
    warp   >= 2.3   && < 4,
    wai-logger >= 2.3 && < 3,
    http-types >= 0.9 && < 1,
    blaze-builder >= 0.4 && < 1,
    bytestring >= 0.10 && < 0.11

-- configuration for an executable 
executable ipnspector
  default-language: Haskell2010
  hs-source-dirs: executables
  main-is: Main.hs
  build-depends: 
    base >= 4.6 && < 5,
    wai-logger,
    warp,
    haskell-starter

-- configuration for Unit tests and properties
test-suite unit-tests-and-properties
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test
  build-depends:
    base                       >= 4.6 && < 5,
    HUnit                      >= 1.2 && < 1.4,
    QuickCheck                 >= 2.4 && < 2.8,
    test-framework             >= 0.6 && < 0.9,
    test-framework-hunit       >= 0.3 && < 0.5,
    test-framework-quickcheck2 >= 0.2 && < 0.4,
    test-framework-th          >= 0.2 && < 0.4

-- doctests
test-suite doctest
  type:           exitcode-stdio-1.0
  main-is:        DocTest.hs
  hs-source-dirs: test
  build-depends:  
    base    >= 4.6 && < 5,
    doctest >= 0.9 && < 0.11,
    Glob    >= 0.7 && < 0.9
